<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ShowBattleAnimationDialog</class>
 <widget class="QWidget" name="ShowBattleAnimationDialog">
  <property name="windowModality">
   <enum>Qt::ApplicationModal</enum>
  </property>
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>215</width>
    <height>234</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Show Battle Animation</string>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <item row="0" column="0">
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>Target</string>
     </property>
     <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0">
       <widget class="QRadioButton" name="radio_enemy">
        <property name="text">
         <string>Enemy</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QRadioButton" name="radio_actor">
        <property name="text">
         <string>Actor</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="combo_enemy">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <item>
         <property name="text">
          <string>Entire Troop</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>1.</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>2.</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>3.</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>4.</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>5.</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>6.</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>7.</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>8.</string>
         </property>
        </item>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QComboBox" name="combo_actor">
        <property name="enabled">
         <bool>false</bool>
        </property>
        <item>
         <property name="text">
          <string>Entire Party</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Actor No. 1</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Actor No. 2</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Actor No. 3</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>Actor No. 4</string>
         </property>
        </item>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="label">
     <property name="text">
      <string>Animation:</string>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QComboBox" name="combo_animation"/>
   </item>
   <item row="4" column="0">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="button_ok">
       <property name="text">
        <string>Ok</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="button_cancel">
       <property name="text">
        <string>Cancel</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item row="3" column="0">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>radio_enemy</sender>
   <signal>toggled(bool)</signal>
   <receiver>combo_enemy</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>58</x>
     <y>53</y>
    </hint>
    <hint type="destinationlabel">
     <x>242</x>
     <y>70</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>radio_actor</sender>
   <signal>toggled(bool)</signal>
   <receiver>combo_actor</receiver>
   <slot>setEnabled(bool)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>62</x>
     <y>91</y>
    </hint>
    <hint type="destinationlabel">
     <x>265</x>
     <y>88</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
